# shidduch-app

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  deps.py  limiter.py  main.py  security.py
backend/app/models/: __init__.py  candidate.py  common.py  matchmaker.py  suggestion.py
backend/app/repositories/: __init__.py  candidate_repo.py  matchmaker_repo.py  suggestion_repo.py
backend/app/routers/: auth.py  candidates.py  match_run.py  matchmakers.py  suggestions.py
backend/app/services/: embeddings.py  matcher.py
backend/scripts/: bootstrap.py  seed_candidates.py  seed_demo.py
backend/tests/: conftest.py  test_auth.py  test_candidates.py  test_embeddings.py  test_suggestions.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  candidates.ts  client.ts  matchRun.ts  matchmakers.ts  suggestions.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: Badge.tsx  ConfirmDialog.tsx  LanguageSwitcher.tsx  Layout.tsx  Pagination.tsx  ProtectedRoute.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  he.json
frontend/src/pages/: LoginPage.tsx  MatchRunPage.tsx  RegisterPage.tsx
frontend/src/pages/admin/: MatchmakersPage.tsx
frontend/src/pages/candidates/: CandidateDetailPage.tsx  CandidateFormPage.tsx  CandidatesPage.tsx
frontend/src/pages/suggestions/: SuggestionCreatePage.tsx  SuggestionDetailPage.tsx  SuggestionsPage.tsx
frontend/src/types/: index.ts
