# =============================================================================
# Shidduch Matchmaking System — Backend
# =============================================================================
# Python backend for the shidduch matchmaking application.
# Built with FastAPI + MongoDB (Motor) + OpenAI for AI-assisted matching.
#
# Installation:
#   pip install -e ".[dev]"
#
# Running:
#   uvicorn app.main:app --reload
# =============================================================================

[project]
name = "shidduch-backend"
version = "0.1.0"
description = "AI-powered shidduch matchmaking backend for orthodox Jewish matchmakers"
requires-python = ">=3.11"
readme = "README.md"

# ---------------------------------------------------------------------------
# Core dependencies
# ---------------------------------------------------------------------------
dependencies = [
    # --- Web framework ---
    "fastapi>=0.115.0",           # Async web framework with automatic OpenAPI docs
    "uvicorn[standard]>=0.30.0",  # ASGI server with hot reload support

    # --- Database ---
    "motor>=3.5.0",               # Async MongoDB driver (wraps PyMongo for asyncio)
    "pymongo[srv]>=4.8.0",        # MongoDB driver with SRV/Atlas connection string support

    # --- Data validation & settings ---
    "pydantic>=2.8.0",            # Data validation using Python type annotations
    "pydantic-settings>=2.4.0",   # Environment variable loading into typed config objects

    # --- Authentication ---
    "argon2-cffi>=23.1.0",        # Argon2id password hashing (OWASP recommended)
    "python-jose[cryptography]>=3.3.0",  # JWT token encoding/decoding
    "python-multipart>=0.0.9",    # Required by FastAPI for form data (login forms)

    # --- AI / Embeddings ---
    "openai>=1.40.0",             # Official OpenAI SDK with async client support
    "tiktoken>=0.7.0",            # Token counting for cost estimation before API calls

    # --- HTTP & resilience ---
    "httpx>=0.27.0",              # Async HTTP client (used by OpenAI SDK internally)
    "tenacity>=8.5.0",            # Retry decorator for transient API failures

    # --- Logging ---
    "structlog>=24.4.0",          # Structured JSON logging with PII redaction processors

    # --- Rate limiting ---
    "slowapi>=0.1.9",             # Rate limiting middleware for FastAPI endpoints
]

# ---------------------------------------------------------------------------
# Development dependencies
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",              # Test framework
    "pytest-asyncio>=0.23.0",     # Async test support for pytest
    "httpx>=0.27.0",              # Used by FastAPI TestClient for async endpoint testing
    "mongomock-motor>=0.0.30",    # In-memory MongoDB mock for unit tests (no real DB needed)
    "ruff>=0.5.0",                # Fast Python linter and formatter (replaces flake8 + black)
    "mypy>=1.11.0",               # Static type checker
    "faker>=28.0.0",              # Generates realistic fake data for seeding/tests
]

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

# Ruff — linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = [
    "S101",  # allow assert in tests
    "S105",  # allow hardcoded passwords in config defaults
]

# Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
